<resources>
    <string name="app_name">AndroidCarProject</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reservations">Your Reservations</string>
    <string name="menu_favorites">Your Favorites</string>
    <string name="menu_carmenu">Car Menu</string>
    <string name="menu_offers">Special Offers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_call">Call/Find Us </string>
    <string name="menu_logout">Logout </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="menu_add">Add Admin</string>
    <string name="menu_delete">Delete Customers</string>
    <string name="menu_view">View All Reserves</string>

</resources>