<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_delete_customer"
            android:icon="@drawable/baseline_person_remove_24"
            android:title="@string/menu_delete" />
        <item
            android:id="@+id/nav_add_admin"
            android:icon="@drawable/baseline_person_add_24"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_view_reserves"
            android:icon="@drawable/baseline_checklist_24"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_logout_admin"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>